syntax = "proto3";
package starnamed.x.escrow.v1beta1;

import "gogoproto/gogo.proto";
import "iov/escrow/v1beta1/types.proto";
import "iov/escrow/v1beta1/params.proto";

option go_package = "github.com/iov-one/starnamed/x/escrow/types";

// GenesisState defines the Escrow module's genesis state
message GenesisState {
    repeated v1beta1.Escrow escrows = 1 [ (gogoproto.nullable) = false ];
    uint64 last_block_time = 2;
    uint64 next_escrow_id = 3;
    v1beta1.Params params = 4 [ (gogoproto.nullable) = false ];
}
